--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <header>
         <!--Qui inserirò Titolo della pagina e fronte con immagini-->
         <h1>Il mio Viaggio a Londra</h1>
-
+        <img src="pexels-bill-emrich-230794-0.jpg" alt="Trittico Londra 1" width=15%>
+        <img src="pexels-bill-emrich-230794-1.jpg" alt="Trittico Londra 2" width=15%>
+        <img src="pexels-bill-emrich-230794-2.jpg" alt="Trittico Londra 3" width=15%>
     </header>
 
     <main>
