Prima sezione con tabella dati

--- a/index.html
+++ b/index.html
@@ -13,11 +13,49 @@
         <img src="pexels-bill-emrich-230794-0.jpg" alt="Trittico Londra 1" width=15%>
         <img src="pexels-bill-emrich-230794-1.jpg" alt="Trittico Londra 2" width=15%>
         <img src="pexels-bill-emrich-230794-2.jpg" alt="Trittico Londra 3" width=15%>
+        <hr>
     </header>
 
     <main>
-        <!--inserisco 4 sezioni al'interno del main-->
+        <!--inserisco 4 sezioni al'interno del main, nella prima sezione inserisco una tabella dati-->
         <section>
+            <h2>Le mie Spese</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                </tbody>
+
+                <tfoot>
+                    <tr>
+                        <td colspan="2">Totale</td>
+                        <td>360€</td>   
+                    </tr>
+                </tfoot>
+
+            </table>
 
         </section>
 
