Inserita sezione con lista UL

--- a/index.html
+++ b/index.html
@@ -56,17 +56,29 @@
                 </tfoot>
 
             </table>
+            <hr>
 
         </section>
 
+        <!--Sezione "cose da fare" con inserimento lista non numerata-->
+        <section>
+            <h2>Cose da fare</h2>
+                <ul>
+                    <li>Visitare la Tower Of London &cross</li>
+                    <li>Visitare Greenwich &check</li>
+                    <li>Ascoltare un artista di strada a Covent Garden &check</li>
+                    <li>Mangiare il tipico Fish and Chips inglese &cross</li>
+                </ul>
+                <hr>
+
+        </section>
+
+        <!--Sezione "Info utili" con inserimento lista non numerata di una lista numerata-->
         <section>
 
         </section>
-
-        <section>
-
-        </section>
-
+        
+        <!--Sezione "Le foto" con inserimento foto prese da Internet-->
         <section>
 
         </section>
