Inserita Sezione Info Utili con doppia lista

--- a/index.html
+++ b/index.html
@@ -75,6 +75,26 @@
 
         <!--Sezione "Info utili" con inserimento lista non numerata di una lista numerata-->
         <section>
+            <h2>Info Utili:</h2>
+                <ol>
+                    <li>Numeri Utili di emergenza</li>
+                        <ul>
+                            <li><strong>999</strong> - Emergenza</li>
+                            <li><strong>101</strong> - Numero Polizia</li>
+                            <li><strong>111</strong> - Numero assistenza medica</li>
+                        </ul>
+                    <li>Hotel</li>
+                    <ul>
+                        <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
+                        <li><strong>Indirizzo Hotel:</strong> Westminster, London SW1A 1AA, Regno unito</li>
+                    </ul>
+                    <li>Aereo</li>
+                    <ul>
+                        <li><strong>Volo di andata:</strong> YI234X, Ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di ritorno:</strong> YI234X Ore 18.30 da London Heatrow</li>
+                    </ul>
+                </ol>
+                <hr>
 
         </section>
         
